fixing jump on animation, also fixing first element slide into place

--- a/css/howls.css
+++ b/css/howls.css
@@ -14,7 +14,7 @@
 #howl-c .howl {
   display: none;
   opacity: 0;
-  margin-top: 30px;
+  padding-top: 30px;
   margin-bottom: 10px;
   cursor: pointer;
   overflow: hidden;
@@ -38,6 +38,7 @@
   margin: 0;
   color: white;
   font-size: 1em;
+  display: block;
 }
 
 #howl-c .howl.show {
@@ -46,10 +47,11 @@
 
 #howl-c .howl.open {
   opacity: 1;
-  margin-top: 0;
+  padding-top: 0;
 }
 
 #howl-c .howl.open.hide {
   opacity: 0;
   height: 0 !important;
+  margin-bottom: 0px;
 }
